--- a/index.html
+++ b/index.html
@@ -71,51 +71,81 @@
 									Electronic Store Sales data analysis<br />
 								</a>
 							</h2>
-							<a href="https://github.com/hesronwells/Electronic_store_sales_data_analysis" class="image main"><img src="Sales_data_port.jfif" alt="" /></a>
+							<a href="https://github.com/hesronwells/Electronic_store_sales_data_analysis" class="image main"><img src="Sales_data_Port.jfif" alt="" /></a>
 							<ul class="actions special">
 								<li><a href="https://github.com/hesronwells/Electronic_store_sales_data_analysis" class="button large">View Project</a></li>
 							</ul>
 						</article>
 
 						<!-- Posts -->
-							<section class="posts">
-								<article>
-									<header>
-										<span class="date">December 22, 2021</span>
-										<h2><a href="https://github.com/hesronwells/Absenteeism_data_analysis/blob/main/README.md">Absenteeism data<br />
-										Analysis</a></h2>
-									</header>
-									<a href="https://github.com/hesronwells/Absenteeism_data_analysis/blob/main/README.md" class="image fit"><img src="absent_data.jfif" alt="" /></a>
-									<p>Preprocessing absenteeism data to analysis most frequent reasons and factor affecting in employee leaves and to create a preditve model as per past trend</p>
-									<ul class="actions special">
-										<li><a href="https://github.com/hesronwells/Absenteeism_data_analysis/blob/main/README.md" class="button">View Project</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<span class="date">January 10, 2022</span>
-										<h2><a href="https://github.com/hesronwells/Integrating_python_sql">Integrating_python_sql<br />
-										connection</a></h2>
-									</header>
-									<a href="https://github.com/hesronwells/Integrating_python_sql" class="image fit"><img src="integrations.jpg" alt="" /></a>
-									<p>Establishing connection between Python and Sql using cursor and running Python code and functions and libraries to add multiple line data into sql seamlessly </p>
-									<ul class="actions special">
-										<li><a href="https://github.com/hesronwells/Integrating_python_sql" class="button">View Project</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<span class="date">April 14, 2021</span>
-										<h2><a href="https://github.com/hesronwells/Scorecrard_generator/tree/main">Scorecard generator <br />
-										using VBA/Macros</a></h2>
-									</header>
-									<a href="https://github.com/hesronwells/Scorecrard_generator/tree/main" class="image fit"><img src="Scorecard.jpg" alt="" /></a>
-									<p>Say no to monoteonous work. Developed an automated excel workbook using VBA/Macros to automatically extract the agents fault cases and record it in scoreacard. This has replaced a manual and tedious process of extracting and copying data in Scorecard </p>
-									<ul class="actions special">
-										<li><a href="https://github.com/hesronwells/Scorecrard_generator/tree/main" class="button">View Project</a></li>
-									</ul>
-								</article>
-							</section>
+						<section class="posts">
+
+							<article>
+								<header>
+									<span class="date">April 14, 2021</span>
+									<h2>
+										<a href="https://github.com/hesronwells/Alteryx_project_for_data_processing">
+											Wholesale store data processing 
+											using Alteryx
+										</a>
+									</h2>
+								</header>
+								<a href="https://github.com/hesronwells/Alteryx_project_for_data_processing" class="image fit"><img src="alteryx.jpg" alt="" /></a>
+								<p>Automating and updating existing Data Warehouse Orders data with the latest POS orders using Alteryx</p>
+								<ul class="actions special">
+									<li><a href="https://github.com/hesronwells/Alteryx_project_for_data_processing" class="button">View Project</a></li>
+								</ul>
+							</article>
+
+							<article>
+								<header>
+									<span class="date">December 22, 2021</span>
+									<h2>
+										<a href="https://github.com/hesronwells/Absenteeism_data_analysis/blob/main/README.md">
+											Absenteeism data<br />
+											Analysis
+										</a>
+									</h2>
+								</header>
+								<a href="https://github.com/hesronwells/Absenteeism_data_analysis/blob/main/README.md" class="image fit"><img src="absent_data.jfif" alt="" /></a>
+								<p>Preprocessing absenteeism data to analysis most frequent reasons and factor affecting in employee leaves and to create a preditve model as per past trend</p>
+								<ul class="actions special">
+									<li><a href="https://github.com/hesronwells/Absenteeism_data_analysis/blob/main/README.md" class="button">View Project</a></li>
+								</ul>
+							</article>
+							<article>
+								<header>
+									<span class="date">January 10, 2022</span>
+									<h2>
+										<a href="https://github.com/hesronwells/Integrating_python_sql">
+											Integrating_python_sql<br />
+											connection
+										</a>
+									</h2>
+								</header>
+								<a href="https://github.com/hesronwells/Integrating_python_sql" class="image fit"><img src="integrations.jpg" alt="" /></a>
+								<p>Establishing connection between Python and Sql using cursor and running Python code and functions and libraries to add multiple line data into sql seamlessly </p>
+								<ul class="actions special">
+									<li><a href="https://github.com/hesronwells/Integrating_python_sql" class="button">View Project</a></li>
+								</ul>
+							</article>
+							<article>
+								<header>
+									<span class="date">April 14, 2021</span>
+									<h2>
+										<a href="https://github.com/hesronwells/Scorecrard_generator/tree/main">
+											Scorecard generator <br />
+											using VBA/Macros
+										</a>
+									</h2>
+								</header>
+								<a href="https://github.com/hesronwells/Scorecrard_generator/tree/main" class="image fit"><img src="Scorecard.jpg" alt="" /></a>
+								<p>Say no to monoteonous work. Developed an automated excel workbook using VBA/Macros to automatically extract the agents fault cases and record it in scoreacard. This has replaced a manual and tedious process of extracting and copying data in Scorecard </p>
+								<ul class="actions special">
+									<li><a href="https://github.com/hesronwells/Scorecrard_generator/tree/main" class="button">View Project</a></li>
+								</ul>
+							</article>
+						</section>
 
 						<!-- Footer -->
 							<footer>
