--- a/index.html
+++ b/index.html
@@ -79,10 +79,26 @@
 
 						<!-- Posts -->
 						<section class="posts">
+							
+							<article>
+								<header>
+									<span class="date">February, 2023</span>
+									<h2>
+										<a href="https://github.com/hesronwells/Alteryx_project_for_data_processing">
+											Attrition rate Dashboard
+										</a>
+									</h2>
+								</header>
+								<a href="https://github.com/hesronwells/PowerBi_Dashboard" class="image fit"><img src="dashboard.png" alt="" /></a>
+								<p>Here is a quick look on the interactive dashboard I build on Attrition rate to help company retain their employees</p>
+								<ul class="actions special">
+									<li><a href="https://github.com/hesronwells/PowerBi_Dashboard" class="button">View Project</a></li>
+								</ul>
+							</article>
 
 							<article>
 								<header>
-									<span class="date">April 14, 2021</span>
+									<span class="date">April 14, 2022</span>
 									<h2>
 										<a href="https://github.com/hesronwells/Alteryx_project_for_data_processing">
 											Wholesale store data processing 
