--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
 									<h2>
 										<a href="https://github.com/hesronwells/Alteryx_project_for_data_processing">
 											Attrition rate Dashboard
+											Power BI
 										</a>
 									</h2>
 								</header>
