--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@
 							</header>
 							<h2>
 								<a href="#">
-									Electronic Store Sales data analysis<br />
+									Credit_Card_fraud_detection_model<br />
 								</a>
 							</h2>
-							<a href="https://github.com/hesronwells/Electronic_store_sales_data_analysis" class="image main"><img src="Sales_data_Port.jfif" alt="" /></a>
+							<a href="https://github.com/hesronwells/Credit-card-fraud-detection-model" class="image main"><img src="Creditc.jpg" alt="" /></a>
 							<ul class="actions special">
-								<li><a href="https://github.com/hesronwells/Electronic_store_sales_data_analysis" class="button large">View Project</a></li>
+								<li><a href="https://github.com/hesronwells/Credit-card-fraud-detection-model" class="button large">View Project</a></li>
 							</ul>
 						</article>
 
@@ -84,7 +84,7 @@
 								<header>
 									<span class="date">February, 2023</span>
 									<h2>
-										<a href="https://github.com/hesronwells/Alteryx_project_for_data_processing">
+										<a href="https://github.com/hesronwells/PowerBi_Dashboard">
 											Attrition rate Dashboard
 											Power BI
 										</a>
@@ -94,6 +94,23 @@
 								<p>Here is a quick look on the interactive dashboard I build on Attrition rate to help company retain their employees</p>
 								<ul class="actions special">
 									<li><a href="https://github.com/hesronwells/PowerBi_Dashboard" class="button">View Project</a></li>
+								</ul>
+							</article>
+							<article>
+								<header>
+									<span class="date">September, 2022</span>
+									<h2>
+										<a href="https://github.com/hesronwells/Alteryx_project_for_data_processing">
+											Electronic Store Sales data analysis
+											
+										</a>
+									</h2>
+								</header>
+								<a href="https://github.com/hesronwells/Electronic_store_sales_data_analysis" class="image main"><img src="Sales_data_Port.jfif" alt="" /></a>
+								<p>In this project I've use Python Pandas & Python Matplotlib to analyze and answer business questions about 12 months 
+									worth of sales data and found a negative corelation between Product sale and purchase price.</p>
+								<ul class="actions special">
+									<li><a href="https://github.com/hesronwells/Electronic_store_sales_data_analysis" class="button">View Project</a></li>
 								</ul>
 							</article>
 
