--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 									Credit_Card_fraud_detection_model<br />
 								</a>
 							</h2>
-							<a href="https://github.com/hesronwells/Credit-card-fraud-detection-model" class="image main"><img src="Creditc.jpg" alt="" /></a>
+							<a href="https://github.com/hesronwells/Credit-card-fraud-detection-model" class="image main"><img src="images/Creditc.jpg" alt="" /></a>
 							<ul class="actions special">
 								<li><a href="https://github.com/hesronwells/Credit-card-fraud-detection-model" class="button large">View Project</a></li>
 							</ul>
@@ -91,7 +91,7 @@
 									</h2>
 								</header>
 								<a href="https://github.com/hesronwells/PowerBi_Dashboard" class="image fit"><img src="dashboard.png" alt="" /></a>
-								<p>Here is a quick look on the interactive dashboard I build on Attrition rate to help company retain their employees</p>
+								<p>Here is a quick look on the interactive dashboard I build on Attrition rate to help the company retain their employees</p>
 								<ul class="actions special">
 									<li><a href="https://github.com/hesronwells/PowerBi_Dashboard" class="button">View Project</a></li>
 								</ul>
@@ -107,7 +107,7 @@
 									</h2>
 								</header>
 								<a href="https://github.com/hesronwells/Electronic_store_sales_data_analysis" class="image main"><img src="Sales_data_Port.jfif" alt="" /></a>
-								<p>In this project I've use Python Pandas & Python Matplotlib to analyze and answer business questions about 12 months 
+								<p>Used Python Pandas & Python Matplotlib to analyze and answer business questions about 12 months 
 									worth of sales data and found a negative corelation between Product sale and purchase price.</p>
 								<ul class="actions special">
 									<li><a href="https://github.com/hesronwells/Electronic_store_sales_data_analysis" class="button">View Project</a></li>
